# segfault

./: segfault.cabal
app/: Main.hs
