name:           segfault
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/tsurucapital/segfault#readme>
homepage:       https://github.com/tsurucapital/segfault#readme
bug-reports:    https://github.com/tsurucapital/segfault/issues
author:         Michael Baikov, Fumiaki Kinoshita
maintainer:     fumiexcel@gmail.com
copyright:      Copyright (c) 2017 Fumiaki Kinoshita
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/tsurucapital/segfault

executable segfault
  main-is: Main.hs
  hs-source-dirs:
      app
  build-depends:
      base
    , bytestring
    , mtl
  default-language: Haskell2010
